--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
     />
-    <title>SRM CARE eSkill</title>
+    <title>eSkill</title>
   </head>
   <body>
     <style>
