--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
     />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.2/katex.min.css" rel="stylesheet" />
     <title>eSkill</title>
   </head>
   <body>
