initial coursecard and requestcourse components added. fixed package.json and version number

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -292,6 +292,9 @@
       [hidden] {
         display: none;
       }
+      div:focus {
+        outline: none !important;
+      }
     </style>
     <div id="root"></div>
   </body>
