faculty progress tracker fixed, minor style change

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
     />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.2/katex.min.css" rel="stylesheet" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.2/katex.min.css"
+      rel="stylesheet"
+    />
     <title>eSkill</title>
   </head>
   <body>
@@ -32,7 +35,7 @@
      */
       body {
         margin: 0;
-        background-color: #000;
+        background-color: #303030;
       }
       /**
      * Render the `main` element consistently in IE.
